feat: java and spring cloud note